# Argus

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CODE_QUALITY_REVIEW.md  DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  README.md  argus.py  argus_codigo_completo.md  codigocompleto.py  install.sh  pyproject.toml  requirements.txt  script.py  script_1.py  script_2.py  setup.py
.omc/state/: hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json
.omx/: metrics.json
.omx/logs/: hooks-2026-03-16.jsonl  turns-2026-03-16.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
ai/: __init__.py  models.py  prompt_builder.py  report_generator.py
collectors/: __init__.py  base.py  holehe.py  maigret.py
config/: platforms_metadata.json  settings.py
output/: __init__.py  formatter.py
processing/: __init__.py  enricher.py  filter.py  normalizer.py
reports/: gfcramos_report.html  gfcramos_report.json
tests/: conftest.py
tests/e2e/: test_ai_analysis.py  test_error_cases.py  test_output_formats.py  test_search_email.py  test_search_username.py
